# resume-optimizer

./: .gitignore  COPYING.md  README.md  background-script.js  content-script.js  manifest.json  package-lock.json  package.json  pnpm-lock.yaml  popup.js  popup.tsx  pyproject.toml  sample-resume.json.ambiguity  skills.json  sorted-skills.json  svelte.config.js  utils.js  webpack.config.js
.devcontainer/: devcontainer.json
ansible/: README.md  micromamba.yml  personal-computer.yml  system.yml
conda/: resume_optimizer.yml.j2
contents/: job-description-header.tsx
extension/: manifest.json
extension/popup/: custom.css  index.html
popup/: left-pad.js
public/: manifest.json
resume_optimizer/: README.md  assign.py  chains.py  cli.py  optimize.py
src/routes/: injection.ts
