[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "resume_optimizer"
description = "Use AI to ensure your resume passes ATS keyword screening."
dynamic = ["version"]
dependencies = [
]
requires-python = ">=3.12"
classifiers = [
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]
readme = "README.md"

[project.optional-dependencies]
dev = [
  "ruff",
]

[tool.ruff]
line-length = 120

[project.scripts]
resume-optimizer = "resume_optimizer.cli:cli"

[tool.setuptools.packages.find]
include = ["resume_optimizer"]
namespaces = false